[package]
name = "rust_web_wars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix"
path = "bin/main_actix.rs"

[[bin]]
name = "tide"
path = "bin/main_tide.rs"

[[bin]]
name = "rocket"
path = "bin/main_rocket.rs"


[features]
default = []
rustls = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }

actix-web = { version = "4", features = ["rustls"] }
rustls = "0"
rustls-pemfile = "1"

tide = "0.16"
async-std = { version = "1.8.0", features = ["attributes"] }
tide-rustls = "0.3.0"

rocket = { version = "0.5.0-rc.2", features = ["json","tls"] }